Enforce automatic bounded fair quotes
